--- a/package.json
+++ b/package.json
@@ -44,9 +44,12 @@
   },
   "devDependencies": {
     "@types/chrome": "^0.0.241",
+    "autoprefixer": "^10.4.14",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "html-webpack-plugin": "^5.5.3",
+    "postcss": "^8.4.27",
+    "tailwindcss": "^3.3.3",
     "ts-loader": "^9.4.4",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
