--- a/manifest.json
+++ b/manifest.json
@@ -7,10 +7,19 @@
       "default_popup": "index.html",
       "default_title": "React Chrome Extension",
       "default_icon": {
-        "16": "icon.png",
-        "48": "icon.png",
-        "128": "icon.png"
+        "16": "logo_icon@16w.png",
+        "32": "logo_icon@32w.png",
+        "48": "logo_icon@48w.png",
+        "96": "logo_icon@96w.png",
+        "128": "logo_icon@128w.png"
       }
+  },
+  "icons": {
+    "16": "logo_icon@16w.png",
+    "32": "logo_icon@32w.png",
+    "48": "logo_icon@48w.png",
+    "96": "logo_icon@96w.png",
+    "128": "logo_icon@128w.png"
   },
   "permissions": [
     "alarms",
